--- a/styles/styles.css
+++ b/styles/styles.css
@@ -630,6 +630,7 @@ section {
 .sidebar {
   width: 100px;
   height: 100vh;
+  min-height: 600px;
   position: fixed;
   top: 0;
   left: 0;
@@ -673,6 +674,7 @@ section {
   .sidebar {
     width: 100vw;
     height: 100px;
+    min-height: auto;
     position: fixed;
     top: auto;
     left: 0;
